fix layout issues

--- a/src/components/UserHome/categoryCard.css
+++ b/src/components/UserHome/categoryCard.css
@@ -169,6 +169,10 @@
   width: calc(100vw - 32px);
   padding: 8px;
   box-shadow: 2px 2px 2px #15141457;
+  max-width: 1200px;
+  padding: 0 1rem;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .headerTitle {
